--- a/views/partials/layout/footer.hbs
+++ b/views/partials/layout/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="footer p-10 bg-secondary justify-around text-neutral">
+<footer id="footer" class="footer p-10 bg-secondary justify-around text-neutral">
 
   <div>
     <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
