--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -15,7 +15,7 @@
 
 {{> layout/header}}
 
-<main class="2xl:mt-[5rem] flex-1">
+<main id="main" class="2xl:mt-[5rem] flex-1">
   {{{body}}}
 </main>
 
