--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -33,6 +33,9 @@
       <li>
         <a href="/album" class="desktop-menu-item">Album fotograficzny</a>
       </li>
+      <li>
+        <a href="/regulamin-i-procedury" class="desktop-menu-item">Regulamin i procedury</a>
+      </li>
     </ul>
     {{#unless userLoggedIn}}
       <div class="py-1">
