--- a/views/partials/layout/mobile-menu.hbs
+++ b/views/partials/layout/mobile-menu.hbs
@@ -28,7 +28,10 @@
       <a href="/organizacja-pracy" class="mobile-menu-item group">Organizacja pracy</a>
     </li>
     <li>
-      <a href="/album" class="mobile-menu-item group0">Album fotograficzny</a>
+      <a href="/album" class="mobile-menu-item group">Album fotograficzny</a>
+    </li>
+    <li>
+      <a href="/regulamin-i-procedury" class="mobile-menu-item group">Regulamin i procedury</a>
     </li>
     {{#unless userLoggedIn}}
       <li>
