--- a/views/home/employees.hbs
+++ b/views/home/employees.hbs
@@ -1,15 +1,33 @@
-<article class="container-for-article">
-  <header>
-    {{> breadcrumbs routeUrl="/pracownicy-przedszkola" routeName="Pracownicy przedszkola"}}
+{{#with content}}
+  <article class="container-for-article">
+    <header>
+      {{> breadcrumbs
+        routeUrl=this.breadcrumbs.routeUrl
+        routeName=this.breadcrumbs.routeName
+      }}
 
-    <h1 class="page-title">Pracownicy przedszkola</h1>
-  </header>
+      <h1 class="page-title">{{this.h1}}</h1>
+    </header>
 
-  <div class="one-article">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?
-    </p>
-  </div>
-</article>
+    {{#each this.sections}}
+      <section class="one-article">
+        <h2 class="text-xl pb-4 font-semibold mx-auto w-fit">{{this.title}}</h2>
+        <ul class="mx-auto w-fit list-disc">
+          {{#each this.mainListItems}}
+            <li class="py-1">{{this.text}}
+              {{#if this.smallListItems}}
+                <ul class="ml-10 list-disc">
+                  {{#each this.smallListItems}}
+                    <li>{{this}}</li>
+                  {{/each}}
+                </ul>
+              {{/if}}
+            </li>
+          {{/each}}
+        </ul>
+      </section>
+    {{/each}}
+
+    <p class="text-xl pb-4 font-semibold mx-auto w-fit">{{this.paragraph}}</p>
+  </article>
+{{/with}}
