--- a/views/home/fees.hbs
+++ b/views/home/fees.hbs
@@ -1,15 +1,16 @@
-<article class="container-for-article">
-  <header>
-    {{> breadcrumbs routeUrl="/oplaty" routeName="Opłaty"}}
+{{#with content}}
+  <article class="container-for-article">
+    <header>
+      {{> breadcrumbs
+        routeUrl=this.breadcrumbs.routeUrl
+        routeName=this.breadcrumbs.routeName
+      }}
 
-    <h1 class="page-title">Opłaty</h1>
-  </header>
+      <h1 class="page-title">{{this.h1}}</h1>
+    </header>
 
-  <div class="one-article">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?
-    </p>
-  </div>
-</article>
+    <section class="one-article">
+    </section>
+
+  </article>
+{{/with}}{
