--- a/views/home/organization.hbs
+++ b/views/home/organization.hbs
@@ -1,21 +1,26 @@
-<article class="container-for-article">
-  <header>
-    {{> breadcrumbs routeUrl="/organizacja-pracy" routeName="Organizacja pracy"}}
+{{#with content}}
+  <article class="container-for-article">
+    <header>
 
-    <h1 class="page-title">Organizacja pracy</h1>
-  </header>
+      {{> breadcrumbs
+        routeUrl=this.breadcrumbs.routeUrl
+        routeName=this.breadcrumbs.routeName
+      }}
 
-  <div class="one-article">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?</p>
+      <h1 class="page-title">{{this.h1}}</h1>
+    </header>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?</p>
+    <div class="one-article mx-auto w-fit">
+      <p>{{this.hoursDescription}} <strong>{{this.hours}}</strong></p>
+      <h2 class="py-4">{{this.h2}}</h2>
+      <ul class="mx-auto w-fit">
+        {{#each this.classes}}
+          <li class="py-1">
+            {{this.years}} <strong>{{this.name}}</strong>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?</p>
-  </div>
-</article>
+  </article>
+{{/with}}
