--- a/views/partials/home/recent-news.hbs
+++ b/views/partials/home/recent-news.hbs
@@ -3,15 +3,16 @@
     <div class="w-full">
       <h2 class="hero-title pb-4 md:pb-10 break-words">Z życia przedszkola</h2>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 w-full">
-        {{#each shorterFirstNews}}
+        {{#each this}}
           <div class="flex flex-col relative">
             <h3 class="font-semibold text-2xl pt-2 text-start whitespace-pre-wrap break-words">{{this.title}}</h3>
             <p class="text-start pb-2">{{this.createdAt}}</p>
             <p
               class="py-4 pb-8 text-justify whitespace-pre-wrap break-words flex justify-center mb-auto">{{this.article}}{{#if
               this.isTooLong}}...{{/if}}</p>
-            <a class="btn btn-ghost border-white font-bold uppercase mt-auto w-fit" href="/aktualnosci/{{this.id}}"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span>czytaj
-                dalej</a>
+            <a class="btn btn-ghost border-white font-bold uppercase mt-auto w-fit"
+               href="/aktualnosci/{{this.id}}"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span>czytaj
+              dalej</a>
           </div>
 
         {{/each}}
