Added links to new routes.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3168,12 +3168,12 @@ html {
   resize: both;
 }
 
-.list-none {
-  list-style-type: none;
-}
-
 .list-disc {
   list-style-type: disc;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .grid-cols-1 {
@@ -3736,6 +3736,10 @@ html {
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-90 {
+  opacity: 0.9;
 }
 
 .shadow {
