Fix: corrected the bug related to changing the contrast.

--- a/views/partials/layout/accessibility.hbs
+++ b/views/partials/layout/accessibility.hbs
@@ -12,7 +12,7 @@
     <div class="tooltip-arrow" data-popper-arrow></div>
   </div>
 
-  <button data-toggle-theme="main,highContrast" data-act-class="ACTIVECLASS" id="contrast-btn" data-tooltip-target="tooltip-contrast" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/contrast-svg}}</button>
+  <button data-toggle-theme="highContrast,main" data-act-class="ACTIVECLASS" id="contrast-btn" data-tooltip-target="tooltip-contrast" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/contrast-svg}}</button>
   <div id="tooltip-contrast" role="tooltip" aria-hidden="true" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-black">
     <span class="p-2">Zmień kontrast</span>
     <div class="tooltip-arrow" data-popper-arrow></div>
