Fix: improved accessibility bugs.

--- a/views/partials/layout/accessibility.hbs
+++ b/views/partials/layout/accessibility.hbs
@@ -17,8 +17,9 @@
     <span class="p-2">Zmień kontrast</span>
     <div class="tooltip-arrow" data-popper-arrow></div>
   </div>
-
+  <div class="text-[150%]"></div>
+  <div class="text-[200%]"></div>
 </div>
 
-<script src="/scripts/accesibility.js"></script>
+<script src="/scripts/accessibility.js"></script>
 <script src="/scripts/theme-change.js"></script>
