Fix: improved font size on mobile devices.

--- a/views/home/implemented-programs.hbs
+++ b/views/home/implemented-programs.hbs
@@ -12,7 +12,7 @@
 
     {{#each this.sections}}
     <section class="one-article">
-      <h2 class="text-2xl pb-4 font-semibold mx-auto w-fit">{{this.title}}</h2>
+      <h2 class="text-xl md:text-2xl pb-4 font-semibold mx-auto w-fit">{{this.title}}</h2>
       <ul class="mx-auto w-fit">
         {{#each this.mainListItems}}
         <li>{{this.text}}
