Fix: improved accessibility features.

--- a/views/partials/layout/skip-to-content.hbs
+++ b/views/partials/layout/skip-to-content.hbs
@@ -1,2 +1,3 @@
+<a class="skip-to-content" href='#navigation'>Przejdź do menu głównego</a>
 <a class="skip-to-content" href='#main'>Przejdź do zawartości</a>
 <a class="skip-to-content" href='#footer'>Przejdź do stopki</a>
