--- a/views/partials/home/main-hero.hbs
+++ b/views/partials/home/main-hero.hbs
@@ -2,15 +2,14 @@
   {{#with img}}
     <div
       class="hero min-h-screen overflow-y-auto"
-      role="img"
-      aria-label="{{this.alt}}"
       style="background-image: url({{this.src}});">
+    <span role="img" aria-label="{{this.alt}}"></span>
   {{/with}}
 
     <div class="hero-overlay bg-opacity-20"></div>
     <div class="hero-content text-center text-white break-words">
       <div class="max-w-md text-info">
-        <h1 class="hero-title break-words">{{this.h1}}</h1>
+        <h1 role="heading" class="hero-title break-words">{{this.h1}}</h1>
         <p class="py-6 text-xl">{{this.headerDescription}}</p>
       </div>
     </div>
