--- a/views/partials/layout/accessibility.hbs
+++ b/views/partials/layout/accessibility.hbs
@@ -1,4 +1,4 @@
-<div class="flex gap-x-[10px] py-0.5">
+<div class="flex gap-x-[10px] py-0.5" role="group">
 
   <button data-tooltip-target="tooltip-zoom-out" id="zoom-out-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/zoom-out-svg}}</button>
   <div id="tooltip-zoom-out" aria-hidden="true" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-black">
