--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -2,11 +2,14 @@
 
   {{> layout/skip-to-content}}
 
-  <nav class="flex flex-wrap items-center justify-between ">
+  <nav id="navigation" class="flex flex-wrap items-center justify-between">
     <a href="/"
-       class=" font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 xl:px-2 2xl:px-4 {{#if
-         userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}">Publiczne
-      Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
+       class="font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 xl:px-2 2xl:px-4
+        {{#if userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}"
+    >
+      <span class="sr-only">Link do strony głównej</span>
+      Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju
+    </a>
     <div class="flex items-center {{#if userLoggedIn}}xl:order-2{{/if}}">
       {{> layout/user-menu}}
 
