Added content types.

--- a/views/home/about.hbs
+++ b/views/home/about.hbs
@@ -14,7 +14,7 @@
     <section class="one-article">
       <h2 class="text-xl md:text-2xl pb-4 font-semibold flex justify-flex">{{this.h2}}</h2>
 
-      {{#with this.healthPromotion}}
+      {{#with this.mainPromotion}}
       <h3 class="font-semibold pt-2 pb-4">{{this.title}}</h3>
       <p class="pb-4">{{this.paragraph}}</p>
     {{/with}}
