Added header and footer data. Updated gitignore.

--- a/views/partials/layout/footer.hbs
+++ b/views/partials/layout/footer.hbs
@@ -3,7 +3,7 @@
   <div>
     {{> icons/temp-logo-svg}}
     <!--    @TODO: change logo-->
-    <p class="font-bold">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju<br /></p>
+    <p class="font-bold">Lorem Ipsum Dolor Sit Kindergarten<br /></p>
     <!--    @TODO: change this-->
     <p>Designed: by Nieopodal.dev</p>
   </div>
@@ -11,20 +11,20 @@
   <div>
     <span class="footer-title opacity-100">Kontakt</span>
     <div class="flex items-center"><span class="w-4 h-4 mr-2" aria-hidden="true">{{> icons/pin-svg}}</span> <span
-      class="sr-only">Adres</span> <span>ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</span>
+      class="sr-only">Adres</span> <span>ul. test 8A, 00-000, Test-Test</span>
     </div>
     <a class="link link-hover flex items-center" href="mailto:poczta@pp23.jastrzebie.pl">
       <span class="w-4 h-4 mr-2" aria-hidden="true">{{> icons/mail-svg}}</span> <span class="sr-only">Email</span>
-      <span>poczta@pp23.jastrzebie.pl</span></a>
+      <span>test@example.com</span></a>
     <a class="link link-hover flex items-center" href="tel:324762348">
       <span class="w-4 h-4 mr-2" aria-hidden="true">{{> icons/tel-svg}}</span> <span class="sr-only">Telefon</span>
-      <span>32 476 23 48</span></a>
+      <span>000 000 000</span></a>
     <a class="m-1 grayscale hover:grayscale-0 font-semibold w-fit flex items-center hover:underline"
        href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
       <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-4 h-4 ml-2" alt="Facebook logo">
     </a>
   </div>
-
+<!--@TODO change contact data!-->
   <div>
     <span class="footer-title opacity-100">Linki</span>
     <a class="link link-hover" href="/informacje-o-dostepnosci">Informacje o dostępności</a>
