--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -8,7 +8,7 @@
         {{#if userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}"
     >
       <span class="sr-only">Link do strony głównej</span>
-      Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju
+      Lorem Ipsum Dolor Sit Kindergarten
     </a>
     <div class="flex items-center {{#if userLoggedIn}}xl:order-2{{/if}}">
       {{> layout/user-menu}}
