--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -6,8 +6,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Publiczne Przedszkole Nr 23 w Jastrzębiu-Zdroju</title>
-
+  <title>Lorem Ipsum Dolor Sit Kindergarten</title>
+<!--@TODO change data-->
   <link rel="stylesheet" href="/styles/style.css">
 </head>
 
