--- a/views/partials/album/editing-photo.hbs
+++ b/views/partials/album/editing-photo.hbs
@@ -8,7 +8,7 @@
       >
 
       <div>
-        <form action="/photo/{{this.fileName}}/{{../this.id}}?_method=DELETE" method="POST">
+        <form action="/photo/{{this.fileName}}/{{../this.slug}}?_method=DELETE" method="POST">
           <div class="dropdown dropdown-top">
             <label tabindex="0" class="btn btn-ghost border-2 m-1">Usuń zdjęcie</label>
             <ul tabindex="0" class="dropdown-content menu z-50 p-2 shadow-md bg-base-100 rounded-box w-52">
