--- a/views/partials/album/editing-form.hbs
+++ b/views/partials/album/editing-form.hbs
@@ -1,4 +1,4 @@
-<form action="/album/{{this.id}}?_method=PATCH" method="POST" enctype="multipart/form-data">
+<form action="/album/{{this.slug}}?_method=PATCH" method="POST" enctype="multipart/form-data">
   <div class="text-lg mx-auto">
     <label class="block py-8">
       <span class="pb-2 font-semibold">Zmień tytuł</span>
@@ -38,7 +38,7 @@
       >
         Usuń album
       </button>
-      <a href="/album/{{this.id}}" class="ghost-actions-btn">Anuluj</a>
+      <a href="/album/{{this.slug}}" class="ghost-actions-btn">Anuluj</a>
     </div>
   </div>
 </form>
