Fixed UI: disabled login btn when logging in.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -775,6 +775,12 @@ html {
   pointer-events: none;
 }
 
+.btn-square {
+  height: 3rem;
+  width: 3rem;
+  padding: 0px;
+}
+
 .btn-circle {
   height: 3rem;
   width: 3rem;
@@ -2554,6 +2560,30 @@ html {
   border-top-width: 4px;
 }
 
+.btn-square:where(.btn-xs) {
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 0px;
+}
+
+.btn-square:where(.btn-sm) {
+  height: 2rem;
+  width: 2rem;
+  padding: 0px;
+}
+
+.btn-square:where(.btn-md) {
+  height: 3rem;
+  width: 3rem;
+  padding: 0px;
+}
+
+.btn-square:where(.btn-lg) {
+  height: 4rem;
+  width: 4rem;
+  padding: 0px;
+}
+
 .btn-circle:where(.btn-xs) {
   height: 1.5rem;
   width: 1.5rem;
@@ -3616,6 +3646,10 @@ html {
   line-height: 2rem;
 }
 
+.text-\[150\%\] {
+  font-size: 150%;
+}
+
 .text-\[200\%\] {
   font-size: 200%;
 }
@@ -3638,10 +3672,6 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[150\%\] {
-  font-size: 150%;
 }
 
 .font-bold {
