Improved news url - now slug is optional.

--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -16,7 +16,7 @@
       <p class="text-center py-2">{{this.createdAt}}</p>
 
       {{#if ../userLoggedIn}}
-        {{> edit-post useSlug=true}}
+        {{> edit-post pageName="album"}}
       {{/if}}
     </header>
 
