--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -14,7 +14,7 @@
       <p class="text-center py-2">Data: {{this.createdAt}}</p>
 
       {{#if ../userLoggedIn}}
-        {{> edit-post this}}
+        {{> edit-post pageName="aktualnosci"}}
       {{/if}}
     </header>
     <section class="text-xl whitespace-pre-wrap break-all flex justify-center">
