Improved album urls - now slug is optional.

--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -8,7 +8,7 @@
       {{> breadcrumbs
         routeUrl="/album"
         routeName="Album fotograficzny"
-        subpageUrl=this.slug
+        subpageUrl=this.id
         subpageName=this.title
       }}
 
