--- a/views/album/edit.hbs
+++ b/views/album/edit.hbs
@@ -1,6 +1,6 @@
 <div class="container-for-article">
 
-  {{> deleting-dialog-box useSlug="true"}}
+  {{> deleting-dialog-box}}
 
   {{#with item}}
 
@@ -13,7 +13,7 @@
       {{> breadcrumbs
         routeUrl="/album"
         routeName="Album fotograficzny"
-        subpageUrl=this.slug
+        subpageUrl=this.id
         subpageName=this.title
         actionName="Edycja"
         actionUrl="/edycja"
