--- a/views/album/success.hbs
+++ b/views/album/success.hbs
@@ -3,8 +3,8 @@
     <h1 class="page-title">Sukces! {{message}}</h1>
   </header>
 
-  {{#if slug}}
-    <div class="bold-link-with-hover text-center"><a href="/album/{{slug}}">Wyświetl ten album</a></div>
+  {{#if id}}
+    <div class="bold-link-with-hover text-center"><a href="/album/{{id}}/{{slug}}">Wyświetl ten album</a></div>
   {{/if}}
 
   <div class="bold-link-with-hover text-center"><a href="/album">Przejdź do listy albumów</a></div>
