--- a/views/news/success.hbs
+++ b/views/news/success.hbs
@@ -4,7 +4,7 @@
   </header>
 
   {{#if id}}
-    <div class="bold-link-with-hover text-center"><a href="/aktualnosci/{{id}}">Wyświetl wpis</a></div>
+    <div class="bold-link-with-hover text-center"><a href="/aktualnosci/{{id}}/{{slug}}">Wyświetl wpis</a></div>
   {{/if}}
 
   <div class="bold-link-with-hover text-center"><a href="/aktualnosci">Przejdź do aktualności</a></div>
