Added content structure into gdpr page.

--- a/views/partials/privacy-policy.hbs
+++ b/views/partials/privacy-policy.hbs
@@ -13,7 +13,7 @@
   </p>
 
   <div class='flex justify-center'>
-    <button id='privacy-policy-btn' class='actions-btn'>
+    <button id='privacy-policy-btn' class='actions-btn no-animation'>
       Rozumiem
     </button>
   </div>
