Fix: improved the display of lists in texts.

--- a/views/home/employees.hbs
+++ b/views/home/employees.hbs
@@ -12,7 +12,7 @@
     {{#each this.sections}}
       <section class="one-article">
         <h2 class="text-xl pb-4 font-semibold mx-auto w-fit">{{this.title}}</h2>
-        <ul class="mx-auto w-fit list-disc">
+        <ul class="mx-auto w-fit list-disc ml-4">
           {{#each this.mainListItems}}
             <li class="py-1">{{this.text}}
               {{#if this.smallListItems}}
