--- a/views/home/gdpr.hbs
+++ b/views/home/gdpr.hbs
@@ -13,7 +13,7 @@
       <section class="one-article">
         <h2 class="text-xl md:text-2xl pb-4 font-semibold mx-auto w-fit">{{this.title}}</h2>
         <p>{{{this.subtitle}}}</p>
-        <ol class="list-decimal">
+        <ol class="list-decimal ml-4">
           {{#each this.mainListItems}}
             <li class="py-1"><span class="py-2">{{{this.text}}}</span>
                 {{#if this.smallListItems}}
