--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5550,6 +5550,10 @@ html {
 }
 
 @media (min-width: 1280px) {
+  .xl\:absolute {
+    position: absolute;
+  }
+
   .xl\:order-1 {
     order: 1;
   }
@@ -5573,6 +5577,10 @@ html {
 
   .xl\:block {
     display: block;
+  }
+
+  .xl\:inline-block {
+    display: inline-block;
   }
 
   .xl\:flex {
